phase-3/deploy-svc.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: boardgame-deployment
spec:
  selector:
    matchLabels:
      app: boardgame
  replicas: 2 
  template:
    metadata:
      labels:
        app: boardgame
    spec:
      containers:
        - name: boardgame
          image: armdevu/boardgame:2.0 
          imagePullPolicy: Always
          ports:
            - containerPort: 8080 


---

apiVersion: v1 
kind: Service 
metadata: 
  name: boardgame-svc
spec:
  selector:
    app: boardgame
  ports:
    - protocol: "TCP"
      port: 8080 
      targetPort: 8080 
  type: LoadBalancer
